Fix LanguageLevel Warnings 9-14